--- a/game/src/index.html
+++ b/game/src/index.html
@@ -7,11 +7,12 @@
     <title>Demo Game</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon-32x32.png">
     <script src="js/phaser.min.js"></script>
-    <script src="js/scenes/Scene1.js"></script>
+    <script src="js/scenes/TitleScreen.js"></script>
+    <script src="js/scenes/LoadingScreen.js"></script>
     <script src="js/scenes/Scene2.js"></script>
     <script src="js/scenes/GameOver.js"></script>
     <script src="js/scenes/PauseScreen.js"></script>
-    <script src="js/game.js"></script>
+    <script src="js/config/config.js"></script>
 </head>
 
 <body>
