--- a/game/src/index.html
+++ b/game/src/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Game</title>
+
     <link rel="icon" type="image/x-icon" href="assets/images/favicon-32x32.png">
+    <link rel="stylesheet" type="text/css" href="css/game.css">
     <script src="js/phaser.min.js"></script>
+
     <script src="js/scenes/TitleScreen.js"></script>
     <script src="js/scenes/LoadingScreen.js"></script>
     <script src="js/scenes/Scene2.js"></script>
