--- a/game/src/index.html
+++ b/game/src/index.html
@@ -12,7 +12,7 @@
 
     <script src="js/scenes/TitleScreen.js"></script>
     <script src="js/scenes/LoadingScreen.js"></script>
-    <script src="js/scenes/Scene2.js"></script>
+    <script src="js/scenes/PlayingScreen.js"></script>
     <script src="js/scenes/GameOver.js"></script>
     <script src="js/scenes/PauseScreen.js"></script>
     <script src="js/config/config.js"></script>
