make Bullet into a single class

--- a/game/src/index.html
+++ b/game/src/index.html
@@ -10,12 +10,18 @@
     <link rel="stylesheet" type="text/css" href="css/game.css">
     <script src="js/phaser.min.js"></script>
 
-    <script src="js/scenes/TitleScreen.js"></script>
-    <script src="js/scenes/LoadingScreen.js"></script>
-    <script src="js/scenes/PlayingScreen.js"></script>
-    <script src="js/scenes/GameOver.js"></script>
-    <script src="js/scenes/PauseScreen.js"></script>
-    <script src="js/config/config.js"></script>
+    <!-- Objects -->
+    <script src="./js/objects/projectiles/Bullet.js"></script>
+
+    <!-- Scenes -->
+    <script src="./js/scenes/TitleScreen.js"></script>
+    <script src="./js/scenes/LoadingScreen.js"></script>
+    <script src="./js/scenes/PlayingScreen.js"></script>
+    <script src="./js/scenes/GameOver.js"></script>
+    <script src="./js/scenes/PauseScreen.js"></script>
+
+    <!-- Configuration -->
+    <script src="./js/config/config.js"></script>
 </head>
 
 <body>
