--- a/game/src/index.html
+++ b/game/src/index.html
@@ -8,9 +8,15 @@
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon-32x32.png">
     <link rel="stylesheet" type="text/css" href="css/game.css">
-    <script src="js/phaser.min.js"></script>
 
+    <!-- Phaser -->
+    <script src="./js/phaser.min.js"></script>
+
+</head>
+
+<body>
     <!-- Objects -->
+    <script src="./js/objects/Entity.js"></script>
     <script src="./js/objects/projectiles/Bullet.js"></script>
 
     <!-- Scenes -->
@@ -22,9 +28,6 @@
 
     <!-- Configuration -->
     <script src="./js/config/config.js"></script>
-</head>
-
-<body>
 </body>
 
 </html>
