--- a/game/src/index.html
+++ b/game/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Guardian 1.0</title>
+    <title>Space Guardian</title>
 
     <link rel="icon" type="image/x-icon" href="assets/images/favicon-32x32.png">
     <link rel="stylesheet" type="text/css" href="css/game.css">
