--- a/game/src/index.html
+++ b/game/src/index.html
@@ -9,10 +9,32 @@
     <link rel="stylesheet" type="text/css" href="css/game.css">
     <!-- Phaser library -->
     <script type="module" src="node_modules/phaser/dist/phaser.js"></script>
+    <script type="module" src="dist/bundle.js"></script>
 </head>
 
 <body>
-    <script type="module" src="dist/bundle.js"></script>
+    <div id="input-form">
+        <input type="text" name="name" placeholder="Enter Your Name Soldier..." />
+    </div>
+
+    <script>
+
+        // Sample leaderboard data
+        let leaderboardData = [];
+
+        function saveName(event) {
+            event.preventDefault();
+
+            // Get the input value
+            var enteredName = document.getElementById("name").value;
+
+            // Save the name in localStorage
+            localStorage.setItem("name", storedScoreArray);
+
+            console.log("Name saved successfully!");
+        }
+
+    </script>
 </body>
 
 </html>
