base resolution for mobile

--- a/game/src/index.html
+++ b/game/src/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div id="game-container"></div>
     <input type="text" id="playerNameInput" placeholder="Your name soldier.">
 </body>
 
